<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    android:background="@color/background">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:contentDescription="@string/Retornar_menu"
            android:src="@drawable/ic_retornar"
            app:tint="@color/colorTextIcons" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Themes"
            android:textColor="@color/colorTextIcons"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
    
    <Button
        android:id="@+id/aplicar"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@color/PopupKeyTextColor"
        android:text="@string/Aplyced"
        android:textAllCaps="false"
        android:textColor="@color/colorTextIcons"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"/>

    

</androidx.constraintlayout.widget.ConstraintLayout>